Add new PDF download and print features

--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -137,6 +137,7 @@
 
     "print_commentary": "Imprimer le commentaire",
     "print": "Imprimer",
+    "printing": "Printing…",
 
     "versions": "Versions",
 
