--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -51,7 +51,13 @@
   "clear": "Alle löschen",
 
   "legal_domain_filter_label": "Erlasse",
-  "legal_domain_filter_all": "Alle",
+  "editor_filter_label": "Herausgeber",
+  "author_filter_label": "Autor",
+  "filter_all": "Alle",
+
+  "sort_label": "Sort",
+  "sort_relevance": "Relevance",
+  "sort_date": "Date",
 
   "Federal Constitution": "Bundesverfassung",
   "Code of Obligations": "Obligationenrecht",
