--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -132,8 +132,8 @@
 
   "is_loading": "Laden...",
 
-  "newest_comments": "Neuste Kommentare",
-  "all_comments": "Alle Kommentare",
+  "newest_comments": "Neuste Kommentierungen",
+  "all_comments": "Alle Kommentierungen",
 
   "footnotes": "Fussnoten",
 
