Fix search results localization

--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -56,7 +56,7 @@
   "filter_all": "Alle",
 
   "sort_label": "Sortieren",
-  "sort_relevance": "Sortieren",
+  "sort_relevance": "Relevanz",
   "sort_date": "Datum",
 
   "Federal Constitution": "Bundesverfassung",
