Add Medical Devices Ordinance translations

--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -78,6 +78,7 @@
   "Freedom of Information Act": "Öffentlichkeitsgesetz",
   "Patents Act": "Patentgesetz",
   "Anti-Money Laundering Act": "Geldwäschereigesetz",
+  "Medical Devices Ordinance": "Medizinprodukteverordnung",
 
   "list_view": "Listenansicht",
   "grid_view": "Gridanansicht",
