--- a/sources/webapp/lang/en.json
+++ b/sources/webapp/lang/en.json
@@ -78,6 +78,7 @@
   "Freedom of Information Act": "Freedom of Information Act",
   "Patents Act": "Patents Act",
   "Anti-Money Laundering Act": "Anti-Money Laundering Act",
+  "Medical Devices Ordinance": "Medical Devices Ordinance",
 
   "list_view": "List view",
   "grid_view": "Grid view",
