--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -78,6 +78,7 @@
     "Freedom of Information Act": "Loi sur la transparence",
     "Patents Act": "Loi sur les brevets",
     "Anti-Money Laundering Act": "Loi sur le blanchiment d’argent",
+    "Medical Devices Ordinance": "Ordonnance sur les dispositifs médicaux",
 
     "list_view": "Liste",
     "grid_view": "Grille",
