--- a/sources/webapp/lang/it.json
+++ b/sources/webapp/lang/it.json
@@ -78,6 +78,7 @@
   "Freedom of Information Act": "Legge sulla trasparenza",
   "Patents Act": "Legge sui brevetti",
   "Anti-Money Laundering Act": "Legge sul riciclaggio di denaro",
+  "Medical Devices Ordinance": "Ordinanza relativa ai dispositivi medici",
 
   "list_view": "Vista elenco",
   "grid_view": "Vista griglia",
