Fix FR citation typo

--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -87,7 +87,7 @@
     "back_to_results": "Retourner aux résultats",
 
     "suggested_citation": "Proposition de citation",
-    "short_citation": "Citation abregée",
+    "short_citation": "Citation abrégée",
     "copy_citation": "Copier",
     "copied_citation": "Copié",
     "copy_citation_error": "Erreur",
