--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -101,6 +101,7 @@
   "disclaimer": "Haftungsausschluss",
   "privacy": "Datenschutzerklärung",
   "imprint": "Impressum",
+  "apis": "APIs",
 
   "home_text": "Onlinekommentar.ch ist die erste gemeinnützige kostenlose Plattform für Open-Access-Kommentare in der Schweiz.",
   "home_more_link": "Mehr",
