--- a/sources/webapp/lang/en.json
+++ b/sources/webapp/lang/en.json
@@ -101,6 +101,7 @@
   "disclaimer": "Disclaimer",
   "privacy": "Privacy Policy",
   "imprint": "Imprint",
+  "apis": "APIs",
 
   "home_text": "Onlinekommentar.ch is the first non-profit free platform for open access commentary in Switzerland.",
   "home_more_link": "More",
