--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -101,6 +101,7 @@
     "disclaimer": "Clause de non-responsabilité",
     "privacy": "Politique de confidentialité",
     "imprint": "Mentions légales",
+  "apis": "APIs",
 
     "home_text": "Onlinekommentar.ch est la première plate-forme gratuite à but non lucratif pour les commentaires en libre accès en Suisse.",
     "home_more_link": "En savoir plus",
