--- a/sources/webapp/lang/it.json
+++ b/sources/webapp/lang/it.json
@@ -101,6 +101,7 @@
   "disclaimer": "Dichiarazione di non responsabilità",
   "privacy": "Politica sulla privacy",
   "imprint": "Impronta",
+  "apis": "APIs",
 
   "home_text": "Onlinekommentar.ch è la prima piattaforma gratuita e senza scopo di lucro per i commentari ad accesso aperto in Svizzera.",
   "home_more_link": "Di più",
