Add double-blind peer review banner

--- a/sources/webapp/lang/de.json
+++ b/sources/webapp/lang/de.json
@@ -125,6 +125,7 @@
   "and": "/",
   "commentary_by": "Eine Kommentierung von",
   "edited_by": "Herausgegeben von",
+  "double_blind_peer_review": "Diese Kommentierung wurde einem doppelblinden Begutachtungsverfahren unterzogen (double-blind peer review).",
 
   "result_found": "Resultat gefunden",
   "results_found": "Resultate gefunden",
