--- a/sources/webapp/lang/en.json
+++ b/sources/webapp/lang/en.json
@@ -126,6 +126,7 @@
 
   "commentary_by": "A commentary by",
   "edited_by": "Edited by",
+  "double_blind_peer_review": "This commentary is double-blind peer reviewed.",
 
   "result_found": "result found",
   "results_found": "results found",
