--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -126,6 +126,7 @@
 
     "commentary_by": "Un commentaire de",
     "edited_by": "Edité par",
+    "double_blind_peer_review": "Ce commentaire a été soumis à une procédure d'évaluation par les pairs en double aveugle (double-blind peer review).",
 
     "result_found": "Résultat trouvé",
     "results_found": "Résultats trouvés",
