--- a/sources/webapp/lang/it.json
+++ b/sources/webapp/lang/it.json
@@ -126,6 +126,7 @@
 
   "commentary_by": "Un commentario di",
   "edited_by": "Editato da",
+  "double_blind_peer_review": "Questo commentario è stato sottoposto a una procedura di revisione paritaria in doppio cieco (double-blind peer review).",
 
   "result_found": "Risultato trovato",
   "results_found": "Risultati trovati",
