Update author text

--- a/sources/webapp/lang/en.json
+++ b/sources/webapp/lang/en.json
@@ -151,7 +151,7 @@
   "versions": "Versions",
 
   "editor_of": "Editor of",
-  "author_of": "Author of",
+  "author_of": "Commentary on",
 
   "current_version": "Current version",
 
