--- a/sources/webapp/lang/it.json
+++ b/sources/webapp/lang/it.json
@@ -151,7 +151,7 @@
   "versions": "Versioni",
 
   "editor_of": "Editore di",
-  "author_of": "Autore di",
+  "author_of": "Commentario(i) di",
 
   "current_version": "Versione attuale",
 
