--- a/sources/webapp/lang/fr.json
+++ b/sources/webapp/lang/fr.json
@@ -151,7 +151,7 @@
     "versions": "Versions",
 
     "editor_of": "Editeur de",
-    "author_of": "Auteur de",
+    "author_of": "Commentaire(s) de",
 
     "current_version": "Version actuelle",
 
